fix navbar z-index

--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -1,8 +1,7 @@
 @import "./style";
 
 .navbar-div {
-    z-index: 9;
-    // display: flex;
+    z-index: 100;
     position: fixed;
     top: 0;
     left: 0;
